# yak-shears

./: .gitignore  .golangci.toml  .golangci.yml  .ls-lint.yml  .pre-commit-config.yaml  README.md  go.mod  go.sum  go.work  go.work.sum  hk.pkl  main.go  mise.toml  pyproject.toml  sql_fluff.pkl
.config/: mise.hk.toml  mise.toml
.github/workflows/: ci.yaml
_notesimport/: .gitignore  note_import.py  pyproject.toml
cmd/: main.go  main_test.go  rename.go  rename_test.go
cmd/config/: config.go
cmd/subCommand/: .gitignore  new.go  new_test.go  rename.go  rename_test.go  state.go  testUtils.go
cmd/subcommands/: list.go  list_test.go  new.go  new_test.go  rename.go  rename_test.go  search.go  search_test.go  testUtils.go  utils.go
cmd/subcommands/sql/: init.sql  insertNote.sql  searchQuery.sql  searchQueryStmt.sql
cmd_test/subcommands_test/: list_test.go  search_test.go  testUtils_test.go
database/: README.md
geese-migrations/: go.mod  go.sum  main.go  main_test.go  mise.toml
geese-migrations/cmd/: main.go
geese-migrations/cmd_test/: main_test.go
geese-migrations/internal/: database.go  main.go  migrationFiles.go
geese-migrations/internal/sql/: initGeeseStmt.sql  insertGeeseStmt.sql  selectLastGeeseMigrationIDStmt.sql
geese-migrations/internal_test/: migrationFiles_test.go
geese-migrations/library_test/: main_test.go
geese-migrations/library_test/test_migrations/: 001_init.sql
notesimport/: pyproject.toml
tests/: __init__.py  configuration.py  test_auth.py  test_server.py
tmp/: tmp.go
yak-notes-cli/: go.mod  go.sum  main.go  mise.subproject.toml  mise.toml
yak-notes-cli/cmd/: main.go
yak-notes-cli/cmd/config/: config.go
yak-notes-cli/cmd/subcommands/: list.go  new.go  rename.go  search.go
yak-notes-cli/cmd/subcommands/sql/: insertEmbeddingsStmt.sql  insertNotesStmt.sql  searchQueryStmt.sql
yak-notes-cli/cmd_test/: main_test.go
yak-notes-cli/cmd_test/subcommands_test/: list_test.go  new_test.go  rename_test.go  search_test.go  utils_test.go
yak-notes-cli/migrations/: 001_init.sql
yak-notes-cli/yak-shears/: go.mod  go.sum  mise.subproject.toml  mise.toml
yak-notes-cli/yak-shears/cmd/subcommands/: list.go  new.go
yak-notes-cli/yak-shears/cmd_test/: main_test.go
yak-notes-cli/yak-shears/cmd_test/subcommands_test/: new_test.go  rename_test.go  search_test.go
yak-shears-web/: go.mod  go.sum  mise.subproject.toml
yak_shears/: __init__.py  _runtime_type_check_setup.py  auth.py  server.py  template.py
yak_shears/auth/: __init__.py  middleware.py  models.py  routes.py  storage.py  webauthn.py
yak_shears/server/: __init__.py  handlers.py  routes.py
yak_shears/templates/: base.html.jinja  error.html.jinja
yak_shears/templates/auth/: login.html.jinja  login_webauthn.html.jinja  register.html.jinja  register_webauthn.html.jinja
